5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1613_1800.log
== TEST (2019-04-04 18:07:36) 
-- CODE:
va= float(input("leia va"))
vb= float(input("leia vb"))
vc= float(input("leia vc"))
soma= leia + leiab+ leiac
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= leia + leiab+ leiac
NameError: name 'leia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:08:29) 
-- CODE:
va= float(input("leia va"))
vb= float(input("leia vb"))
vc= float(input("leia vc"))
soma= leia**2 + leiab**2+ leiac**2
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= leia**2 + leiab**2+ leiac**2
NameError: name 'leia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:40) 
-- CODE:
va= float(input("leia va"))
vb= float(input("leia vb"))
vc= float(input("leia vc"))
soma= leia**2 + leiab**2+ leiac**2
print(round, 7)
-- EXECUTION TIME:
0.138486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    soma= leia**2 + leiab**2+ leiac**2
NameError: name 'leia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:10:41) 
-- CODE:
va= float(input("leia va"))
vb= float(input("leia vb"))
vc= float(input("leia vc"))
soma= leia**2 + leiab**2+ leiac**2
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= leia**2 + leiab**2+ leiac**2
NameError: name 'leia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:10:47) 
-- CODE:
va= float(input("leia va"))
vb= float(input("leia vb"))
vc= float(input("leia vc"))
soma= leia**2 + leiab**2+ leiac**2
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= leia**2 + leiab**2+ leiac**2
NameError: name 'leia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:12:36) 
-- CODE:
va= float(input("leia va"))
vb= float(input("leia vb"))
vc= float(input("leia vc"))
soma= leia**2 + leiab**2+ leiac**2 / a + b + c
print(round, 7)
-- EXECUTION TIME:
0.160859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    soma= leia**2 + leiab**2+ leiac**2 / a + b + c
NameError: name 'leia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:12:37) 
-- CODE:
va= float(input("leia va"))
vb= float(input("leia vb"))
vc= float(input("leia vc"))
soma= leia**2 + leiab**2+ leiac**2 / a + b + c
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= leia**2 + leiab**2+ leiac**2 / a + b + c
NameError: name 'leia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:12:57) 
-- CODE:
va= float(input("leia va"))
vb= float(input("leia vb"))
vc= float(input("leia vc"))
soma= leia**2 + leiab**2+ leiac**2 / a + b + c
total(soma)
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= leia**2 + leiab**2+ leiac**2 / a + b + c
NameError: name 'leia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:59:57) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= leia**2 + leiab**2+ leiac**2 / a + b + c
total(soma)
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= leia**2 + leiab**2+ leiac**2 / a + b + c
NameError: name 'leia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:00:37) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= leiaa**2 + leiab**2+ leiac**2 / a + b + c
total(soma)
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= leiaa**2 + leiab**2+ leiac**2 / a + b + c
NameError: name 'leiaa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:01:06) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= va**2 + vb**2+ vc**2 / a + b + c
total(soma)
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= va**2 + vb**2+ vc**2 / a + b + c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:01:45) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= (va**2 + vb**2+ vc**2) / a + b + c
total(soma)
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= (va**2 + vb**2+ vc**2) / a + b + c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:02:22) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= (laeiavaa**2 + laiavb**2+ leiavc**2) / a + b + c
total(soma)
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= (laeiavaa**2 + laiavb**2+ leiavc**2) / a + b + c
NameError: name 'laeiavaa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:02:56) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
print(round, 7)
-- OUTPUT:
<built-in function round> 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:03:03) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
print(round, 7)
-- EXECUTION TIME:
0.167693
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
<built-in function round> 7
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
<built-in function round> 7
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
<built-in function round> 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:03:37) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
print(round(x, 7)
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:03:48) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= (laeiavaa**2 + laiavb**2+ leiavc**2) / a + b + c
print(round(x, 7)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:04:13) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= (va**2 + vb**2+ vc**2) / a + b + c
print(round(x, 7)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:04:24) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= (va**2 + vb**2+ vc**2) / a + b + c
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= (va**2 + vb**2+ vc**2) / a + b + c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:13:07) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= va**2 + vb**2+ vc**2 / a + b + c
print(round, 7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= va**2 + vb**2+ vc**2 / a + b + c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:14:47) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= (va**2 + vb**2+ vc**2) / (a + b + c)
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= (va**2 + vb**2+ vc**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:15:07) 
-- CODE:
va= float(input("leia va: "))
vb= float(input("leia vb: "))
vc= float(input("leia vc: "))
soma= (va**2 + vb**2+ vc**2) / (a + b + c)
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= (va**2 + vb**2+ vc**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:16:05) 
-- CODE:
va= float(input("leia a: "))
vb= float(input("leia b: "))
vc= float(input("leia c: "))
soma= (va**2 + vb**2+ vc**2) / (a + b + c)
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= (va**2 + vb**2+ vc**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:17:27) 
-- CODE:
va= float(input("leia a: "))
vb= float(input("leia b: "))
vc= float(input("leia c: "))
soma= (a**2 + b**2+ c**2) / (a + b + c)
print(round(soma, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma= (a**2 + b**2+ c**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:18:53) 
-- CODE:
va= float(input("leia a: "))
vb= float(input("leia b: "))
vc= float(input("leia c: "))
soma= (va**2 + vb**2+ vc**2) / (va + vb + c)v
print(round(soma, 7))
-- ERROR:
File "XXXX", line 4
    soma= (va**2 + vb**2+ vc**2) / (va + vb + c)v
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:19:08) 
-- CODE:
va= float(input("leia a: "))
vb= float(input("leia b: "))
vc= float(input("leia c: "))
soma= (va**2 + vb**2+ vc**2) / (va + vb + vc)
print(round(soma, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:19:32) 
-- CODE:
va= float(input("leia a: "))
vb= float(input("leia b: "))
vc= float(input("leia c: "))
soma= (va**2 + vb**2+ vc**2) / (va + vb + vc)
print(round(soma, 7))
-- EXECUTION TIME:
0.162735
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
